Fix z-index bugs

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.about-main-image {
-  img {
-    width: 100%;
-  }
-}
-
 figure {
   margin-bottom: 36px;
 }
@@ -20,13 +14,6 @@ header {
 
 .first-section-about {
   margin-top: -1.5rem;
-}
-
-.about-header-image-container {
-  img {
-    width: 100%;
-    margin-bottom: -12px;
-  }
 }
 
 /* set up employees-container grid */
