--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,7 @@
 header {
   padding-bottom: 0.875rem;
   margin-bottom: 0.875rem;
+  z-index: 1;
 }
 
 .main--navigation-logo {
